# simuladores-netuno

./: README.md
gpu_sonar_simulation/: CMakeLists.txt  package.xml
gpu_sonar_simulation/include/: Sonar.hpp
gpu_sonar_simulation/include/base-logging/src/: Logging.hpp
gpu_sonar_simulation/include/base-logging/src/logging/: logging_iostream_style.h  logging_printf_style.cpp  logging_printf_style.h
gpu_sonar_simulation/include/base-types/base/: Angle.hpp  Eigen.hpp
gpu_sonar_simulation/include/base-types/base/samples/: Frame.hpp  Sonar.hpp  SonarBeam.hpp  SonarScan.hpp
gpu_sonar_simulation/include/frame_helper/src/: Calibration.cpp  Calibration.h  CalibrationCv.cpp  CalibrationCv.h  ColorGradient.cpp  ColorGradient.h  ColorGradientTypes.h  FrameHelper.cpp  FrameHelper.h  FrameHelperTypes.h  FrameQImageConverter.h
gpu_sonar_simulation/include/jpeg_conversion/src/: jpeg_conversion.cpp  jpeg_conversion.hpp
gpu_sonar_simulation/include/vizkit3d_normal_depth_map/: NormalMapping_test.cpp
gpu_sonar_simulation/include/vizkit3d_normal_depth_map/resources/shaders/: normalDepthMap.frag  normalDepthMap.vert
gpu_sonar_simulation/include/vizkit3d_normal_depth_map/src/: ImageViewerCaptureTool.cpp  ImageViewerCaptureTool.hpp  NormalDepthMap.cpp  NormalDepthMap.hpp
gpu_sonar_simulation/include/vizkit3d_normal_depth_map/test/: CMakeLists.txt  Material_test.cpp  NormalDepthMap_test.cpp  NormalMapping_test.cpp
gpu_sonar_simulation/include/widget_collection/generic_widgets/: DrawItem.cc  DrawItem.h  EllipseItem.cc  EllipseItem.h  FillItem.cc  FillItem.h  LineItem.cc  LineItem.h  PaintWidget.cc  PaintWidget.h  PointItem.cc  PointItem.h  PolygonItem.cc  PolygonItem.h  PolylineItem.cc  PolylineItem.h  RectangleItem.cc  RectangleItem.h  TextItem.cc  TextItem.h
gpu_sonar_simulation/include/widget_collection/image_view_old/: ImageViewOld.cc  ImageViewOld.h  ImageViewOldGL.cc  ImageViewOldGL.h
gpu_sonar_simulation/include/widget_collection/multi_view/: MultiWidget.h
gpu_sonar_simulation/include/widget_collection/sonar_view/: SonarView.cc  SonarView.h  SonarViewGL.cc  SonarViewGL.h  SonarViewPlugin.cc  SonarViewPlugin.h  sonarTest.cpp
gpu_sonar_simulation/include/widget_collection/sonar_widget/: SonarPlot.cc  SonarPlot.h  SonarWidget.cc  SonarWidget.h  SonarWidgetPlugin.cc  SonarWidgetPlugin.h
gpu_sonar_simulation/src/: Sonar.cpp  main.cpp
gpu_sonar_simulation/test/: test_Sonar.cpp
gpu_sonar_simulation/uwmodels/: convert_obj_osgb.sh
gpu_sonar_simulation/uwmodels/yacht/: terrain.mtl  terrain.osg  teste.mtl
underwater_vehicle_dynamics/: CMakeLists.txt  package.xml
underwater_vehicle_dynamics/config/: dynamics_g500.yaml
underwater_vehicle_dynamics/data/scenes/: yacht.xml
underwater_vehicle_dynamics/data/terrain/yacht/: yacht.ive  yacht.mtl  yacht.osgt
underwater_vehicle_dynamics/data/terrain/yacht/boats/: boat1.rar
underwater_vehicle_dynamics/data/terrain/yacht/boats/boat1/: model.dae
underwater_vehicle_dynamics/data/terrain/yacht/boats/boat3/: boat.3ds  (+3 more)
underwater_vehicle_dynamics/launch/: UWSim_g500_dynamics.launch
underwater_vehicle_dynamics/src/: dynamics (cópia).py  dynamics.py  keyboard.py
uuv_simulator/uuv_control/uuv_control_utils/config/: trajetoria_romulo.yaml  yacht_waypoints.yaml
uuv_simulator/uuv_control/uuv_control_utils/launch/: send_yacht_waypoints.launch
uuv_simulator/uuv_descriptions/launch/: gazebo_uwsim.launch  yacht.launch
uuv_simulator/uuv_descriptions/world_models/yacht_ocean/: model.config  model.sdf
uuv_simulator/uuv_descriptions/world_models/yacht_scene/: CMakeLists.txt  boat_d.tga  model.config  model.sdf  yacht-collision.stl  yacht-collision1.stl  yacht1.dae
uuv_simulator/uuv_descriptions/worlds/: yacht-scene.world
uuv_simulator/uuv_gazebo/launch/: rexrov_manipulation.launch
uuv_simulator/uuv_tutorials/uuv_tutorial_dp_controller/launch/: dp_controller_demo.launch
(+2 files in other folders)
