<?xml version="1.0"?>
<package>
  <name>gpu_sonar_simulation</name>
  <version>1.0.0</version>
  <description>Driver for Imaging Sonar Simulation</description>
  <maintainer email="romulogcerqueira@gmail.com">RômuloCerqueira</maintainer>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<depend>qt_build</depend>-->

</package>
